<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical"
    tools:context=".HelpActivity">

    <!-- SINGLE LAYOUT CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- HEADER FIELDS -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/help_welcome"
            android:textAlignment="textStart"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- BORDER DECORATION -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#60a0d6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="left"
            android:padding="20sp"
            android:text="@string/help_intro"
            android:textSize="20sp" />

        <!-- QUESTIONS & ANSWERS -->

        <!-- QUESTION 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e3e1df"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_question_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@string/help_question_1"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <ImageView
                android:id="@+id/img_arrow_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <!-- ANSWER 1 -->
        <TextView
            android:id="@+id/txt_answer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/help_answer_1"
            android:visibility="gone" />

        <!-- QUESTION 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#e3e1df"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_question_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:padding="8dp"
                android:text="@string/help_question_2"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <ImageView
                android:id="@+id/img_arrow_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <!-- ANSWER 2-->
        <TextView
            android:id="@+id/txt_answer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/help_answer_2"
            android:visibility="gone" />

        <!-- QUESTION 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#e3e1df"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_question_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:padding="8dp"
                android:text="@string/help_question_3"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <ImageView
                android:id="@+id/img_arrow_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <!-- ANSWER 3-->
        <TextView
            android:id="@+id/txt_answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/help_answer_3"
            android:visibility="gone" />

        <!-- QUESTION 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#e3e1df"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_question_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:padding="8dp"
                android:text="@string/help_question_4"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <ImageView
                android:id="@+id/img_arrow_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <!-- ANSWER 4 -->
        <TextView
            android:id="@+id/txt_answer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/help_answer_4"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>